--- a/LotusProject/Views/Shared/_Layout.cshtml
+++ b/LotusProject/Views/Shared/_Layout.cshtml
@@ -1,34 +1,303 @@
-﻿<!DOCTYPE html>
+﻿@model ClassLibraryModels.InputModels.InputCustomer
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
+
+    <!-- Semantic UI -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.js"></script>
+    <script>
+        $('.ui.dropdown')
+            .dropdown()
+            ;
+    </script>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
+    <title>@ViewBag.Title - LotusSPA</title>
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="~/static/css/styleLayout.css">
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light fluid fixed-top">
+        <a href="~/Home/InitialPage"><img src="~/static/Images/LogoForBlue.png" height="50" width="50"></a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <b><a class="nav-link" href="@Url.Action( "InitialPage", "Home")"><b>Início</b></a></b>
+                </li>
+                <li class="nav-item">
+                    <b> <a class="nav-link" href="@Url.Action( "InitialPage", "Home")"><b>Reserva</b></a></b>
+                </li>
+                <li class="nav-item">
+                    <b> <a class="nav-link" href="@Url.Action( "KnowUs", "Home")"><b>Contato</b></a></b>
+                </li>
+                <li>
+                    <div class="center-content">
+                        <div class="ui simple dropdown nav-link drop">
+                            <b>Categorias</b>
+                            <i class="dropdown icon"></i>
+                            <div class="menu">
+                                <div class="item"><b>Beleza</b></div>
+                                <div class="item"><b>Hidratação</b></div>
+                                <div class="item"><b>Banho</b></div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+            </ul>
+
+            <div class=" center-content">
+                <div class="ui vertical animated button nav-link buttoncarcolor">
+                    <div class="visible content"><i class="shop icon"></i></div>
+                    <div class="hidden content">
+                        Carrinho
+                    </div>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
+
+            <form class="d-flex center-content">
+
+
+
+                <div class="ui category search">
+                    <div class="ui icon input">
+                        <input class="prompt" type="text" placeholder="Search products...">
+                        <i class="search icon"></i>
+                    </div>
+                    <div class="results"></div>
+                </div>
+            </form>
+            &nbsp;&nbsp;
+            <div>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        @if (Session["emailSignIn"] != null)
+                        {
+                            <div class="center-content" style="background-color: #EFEAE5">
+                                <div class="ui simple dropdown nav-link drop">
+                                    <b>@Session["emailSignIn"]</b>
+                                    <i class="dropdown icon"></i>
+                                    <div class="menu" style="background-color: #2A435B">
+                                        <div class="item" style="color: #EFEAE5"><b>@Html.ActionLink("Gerenciar conta", "MenageAccount", "Customer", new { EMAIL = Session["emailSignIn"] }, new { @class = "item" })</b></div>
+                                        <div class="item" style="color: #EFEAE5"><a href="@Url.Action("Logout","Customer")"><b>Logout</b></a></div>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <a></a>
+                        }
+                        else
+                        {
+                            <a class="nav-link" href="" data-bs-toggle="modal" data-bs-target="#ModalSignIn"><b>Sign In</b></a>
+                        }
+
+                    </li>
                 </ul>
+            </div>
+
+        </div>
+
+    </nav>
+
+
+
+
+
+
+    <!--Modal Sign in-->
+    <div class="modal fade" id="ModalSignIn" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content" style="background-color: #2A435B">
+
+                <div class="modal-header" style="border-color: #2A435B">
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body custom-modal" style="background-color: #2A435B">
+                    <div class="row row-custom">
+
+                        <div class="col-md-6 form-side">
+
+                            @using (Html.BeginForm("SignIn", "Customer", FormMethod.Post, new { @style = "width: 70%" }))
+                            {
+                                <!--Form-->
+
+
+                                <div style="margin-top:3%; margin-left:1%">
+                                    <h3 style=" color: #2A435B">Entrar</h3>
+                                    <hr style="height: 2px; width: 100%; border-width: 0; background-color: #2A435B; color: #2A435B ">
+                                </div>
+                                <div class="mb-3">
+
+                                    @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%; padding-top:5%" })
+                                    @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @placeholder = "Insira seu email...", @style = "border-color: #2A435B" } })
+
+                                </div>
+
+                                <div class="mb-3">
+                                    @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%;" })
+                                    @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @placeholder = "Insira sua senha...", @style = "border-color: #2A435B" } })
+
+                                </div>
+
+                                @Html.ValidationSummary(true, "", new { @class = "text-danger" });
+                                <button type="submit" class="btn btn-outline-primary" style="width:100%"><b>ENTRAR</b></button>
+                                <br /><br />
+                                <div class="mb-3">
+                                    <p><a href="" style="margin-left: 1%; color: #2A435B" data-bs-dismiss="modal" data-bs-target="#ModalSignUp" data-bs-toggle="modal">Não tenho cadastro</a></p>
+                                </div>
+                                <script src="@Url.Content("~/Scripts/jquery-3.4.1.min.js")" type="text/javascript"></script>
+                                <script src="@Url.Content("~/Scripts/jquery.validate.js")" type="text/javascript"></script>
+                                <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+                                <!--Form Final-->
+                            }
+                        </div>
+
+                        <div class="col-md-6 photo-side">
+                            <img class="photosvglogin" src="~/static/Images/svg/SignIn.svg" />
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <!--Modal Up-->
+    <div class="modal fade" id="ModalSignUp" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content" style="background-color: #2A435B">
+
+                <div class="modal-header" style="border-color: #2A435B">
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body custom-modal" style="background-color: #2A435B">
+                    <div class="row row-custom">
+                        <div class="col-md-6 photo-side">
+                            <img style="height:80%; width:80%" src="~/static/Images/svg/SignUpTwo.svg" />
+                        </div>
+
+
+                        <div class="col-md-6 form-side">
+
+
+                            <!--Form-->
+                            @using (Html.BeginForm("SignUp", "Customer", FormMethod.Post, new { @style = "width: 70%" }))
+                            {
+
+                                @Html.AntiForgeryToken()
+
+                                <div style="margin-top:5%; margin-left:1%">
+                                    <h3 style=" color: #2A435B">Cadastrar</h3>
+                                    <hr style="height: 2px; width: 100%; border-width: 0; background-color: #2A435B; color: #2A435B ">
+                                </div>
+                                <div class="row" style=" padding-top: 2%">
+                                    <div class="col-md-6">
+
+                                        @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%;" })
+                                        @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @placeholder = "Insira seu nome completo...", @style = "border-color: #2A435B" } })
+                                        @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        @Html.LabelFor(model => model.telephone, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%;" })
+                                        @Html.EditorFor(model => model.telephone, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @placeholder = "Insira seu telefone...", @style = "border-color: #2A435B" } })
+                                        @Html.ValidationMessageFor(model => model.telephone, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div style="margin-top: 1%;">
+                                    @Html.LabelFor(model => model.sex, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%;" })
+                                    <div class="form-check" style="margin-left:0">
+                                        @Html.RadioButton("sex", "M", htmlAttributes: new { @style = "form-check" }) Maculino
+                                        @Html.RadioButton("sex", "F", htmlAttributes: new { @style = "form-check" }) Feminino
+                                        @Html.RadioButton("sex", "-", htmlAttributes: new { @style = "form-check" }) Não identificado
+                                    </div>
+                                    @Html.ValidationMessageFor(model => model.sex, "", new { @class = "text-danger" })
+
+                                </div>
+
+
+
+                                <div class="row" style=" margin-top: 1%;">
+                                    <div class="col-md-12">
+                                        @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%;" })
+                                        @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @placeholder = "Insira seu nome completo...", @style = "border-color: #2A435B" } })
+                                        @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-md-6">
+
+                                        @Html.LabelFor(model => model.cpf, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%;" })
+                                        @Html.EditorFor(model => model.cpf, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @placeholder = "Insira seu CPF...", @style = "border-color: #2A435B" } })
+                                        @Html.ValidationMessageFor(model => model.cpf, "", new { @class = "text-danger" })
+                                    </div>
+
+                                    <div class="col-md-6">
+
+                                        @Html.LabelFor(model => model.birthday, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%;" })
+                                        @Html.EditorFor(model => model.birthday, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @style = "border-color: #2A435B", @type = "date" } })
+                                        @Html.ValidationMessageFor(model => model.birthday, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+
+                                <div class="row" style="margin-top: 1%; margin-bottom:3%">
+                                    <div class="col-md-6">
+                                        @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%;" })
+                                        @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @placeholder = "Insira sua senha...", @style = "border-color: #2A435B" } })
+                                        @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%;" })
+                                        @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @placeholder = "Confirme sua senha...", @style = "border-color: #2A435B" } })
+                                        @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <button type="submit" class="btn btn-outline-primary" style="width:100%"><b>CADASTRAR</b></button>
+
+                                <br /><br />
+                                <div class="mb-3">
+                                    <p><a href="" style="margin-left: 1%; color: #2A435B" data-bs-dismiss="modal" data-bs-target="#ModalSignIn" data-bs-toggle="modal">Já tenho cadastro</a></p>
+                                </div>
+                                <script src="@Url.Content("~/Scripts/jquery-3.4.1.min.js")" type="text/javascript"></script>
+                                <script src="@Url.Content("~/Scripts/jquery.validate.js")" type="text/javascript"></script>
+                                <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+                            }
+                            <!--Form Final-->
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Modal Final-->
+
+
+    <div>
+
         @RenderBody()
+
+    </div>
+
+
+    <div class="body-content">
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
@@ -36,7 +305,6 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
