Add EntityFramework | InsertCust

--- a/LotusProject/Views/Shared/_Layout.cshtml
+++ b/LotusProject/Views/Shared/_Layout.cshtml
@@ -195,7 +195,7 @@
 
 
                             <!--Form-->
-                            @using (Html.BeginForm("SignUp", "Customer", FormMethod.Post, new { @style = "width: 70%" }))
+                            @using (Html.BeginForm("InsertCustomer", "Home", FormMethod.Post, new { @style = "width: 70%" }))
                             {
 
                                 @Html.AntiForgeryToken()
