Button for MainStore

--- a/LotusProject/Views/Home/Home.cshtml
+++ b/LotusProject/Views/Home/Home.cshtml
@@ -24,7 +24,7 @@
 
         <div class="col-md-2 right-side">
             <div class="btnreserva">
-                <button class="ui inverted violet button rounded-pill" style="width:170px">Acesso a loja</button>
+                <a href="~/Store/MainStore" class="ui inverted violet button rounded-pill" style="width:170px">Acesso a loja</a>
             </div>
         </div>
     </div>
