--- a/LotusProject/Views/Home/Home.cshtml
+++ b/LotusProject/Views/Home/Home.cshtml
@@ -18,7 +18,7 @@
 
         <div class="col-md-2 left-side">
             <div class="btnreserva">
-                <button class="ui inverted violet button rounded-pill" style="width:170px">Fazer reserva</button>
+                <a href="~/Reservation/Reservation" class="ui inverted violet button rounded-pill" style="width:170px">Fazer reserva</a>
             </div>
         </div>
 
