Layout Store Update

--- a/LotusProject/Views/Shared/_Layout.cshtml
+++ b/LotusProject/Views/Shared/_Layout.cshtml
@@ -275,7 +275,7 @@ ClassLibraryModels.ViewModels.Cep cep = ViewBag.Cep;
 
 
     
-        <div class="footer">
+        <div class="footer" style="padding-bottom: 0">
             <div class="container">
                 <div class="card-footer" style="text-align: center; height:10px">
                 </div>
