--- a/LotusProject/Views/Store/MainStore.cshtml
+++ b/LotusProject/Views/Store/MainStore.cshtml
@@ -2,16 +2,142 @@
 @{
     Layout = "~/Views/Shared/_LayoutStore.cshtml";
 }
-
+<link rel="stylesheet" href="~/static/css/StyleStore.css" />
 <!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>MainStore</title>
-</head>
-<body>
-    <div> 
-    </div>
-</body>
-</html>
+<div class="content-store">
+
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+    <p>conteudo</p>
+</div>
