--- a/LotusProject/Views/Reservation/Reservation.cshtml
+++ b/LotusProject/Views/Reservation/Reservation.cshtml
@@ -3,269 +3,58 @@
     ViewBag.Title = "Reservation";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<head>
+    <link rel="stylesheet" href="~/static/css/StyleReservation.css" />
+</head>
 
-<link rel="stylesheet" href="~/static/css/StyleReservation.css">
-<div class="container">
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="max-height: 600px; padding-top: 70px;">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="~/static/Images/Lotus SPA.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="~/static/Images/Lotus SPA.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="~/static/Images/Lotus SPA.png" class="d-block w-100" alt="...">
-            </div>
-           
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+<div class="card text-center card-top">
+    <div class="card-body">
+        <h2 class="card-title">Special title treatment</h2>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
-
-    <div class="row">
-
-        <div class="col-md-3">
-
-            <div class="ui cards ">
-                <div class="card main-cards">
-                    <div class="image">
-                        <img src="~/static/Images/ImageKnowUs.png">
-                    </div>
-                    <div class="content">
-                        <div class="header">Nome do pacote</div>
-                        <div class="meta">
-                            <a>Duração do pacote</a>
-                        </div>
-                        <div class="description">
-                            Esta é a descrição do pacote
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <span class="right floated price">
-                            R$100,00
-                        </span>
-                        <button class="ui inverted violet button">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="col-md-3">
-
-            <div class="ui cards ">
-                <div class="card main-cards">
-                    <div class="image">
-                        <img src="~/static/Images/ImageKnowUs.png">
-                    </div>
-                    <div class="content">
-                        <div class="header">Nome do pacote</div>
-                        <div class="meta">
-                            <a>Duração do pacote</a>
-                        </div>
-                        <div class="description">
-                            Esta é a descrição do pacote
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <span class="right floated price">
-                            R$100,00
-                        </span>
-                        <button class="ui inverted violet button">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="col-md-3">
-
-            <div class="ui cards ">
-                <div class="card main-cards">
-                    <div class="image">
-                        <img src="~/static/Images/ImageKnowUs.png">
-                    </div>
-                    <div class="content">
-                        <div class="header">Nome do pacote</div>
-                        <div class="meta">
-                            <a>Duração do pacote</a>
-                        </div>
-                        <div class="description">
-                            Esta é a descrição do pacote
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <span class="right floated price">
-                            R$100,00
-                        </span>
-                        <button class="ui inverted violet button">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-
-
-        </div>
-
-        <div class="col-md-3">
-
-            <div class="ui cards ">
-                <div class="card main-cards">
-                    <div class="image">
-                        <img src="~/static/Images/ImageKnowUs.png">
-                    </div>
-                    <div class="content">
-                        <div class="header">Nome do pacote</div>
-                        <div class="meta">
-                            <a>Duração do pacote</a>
-                        </div>
-                        <div class="description">
-                            Esta é a descrição do pacote
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <span class="right floated price">
-                            R$100,00
-                        </span>
-                        <button class="ui inverted violet button">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-
-        <hr />
-
-
-
-
-        <div class="col-md-3">
-
-            <div class="ui cards ">
-                <div class="card main-cards">
-                    <div class="image">
-                        <img src="~/static/Images/ImageKnowUs.png">
-                    </div>
-                    <div class="content">
-                        <div class="header">Nome do pacote</div>
-                        <div class="meta">
-                            <a>Duração do pacote</a>
-                        </div>
-                        <div class="description">
-                            Esta é a descrição do pacote
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <span class="right floated price">
-                            R$100,00
-                        </span>
-                        <button class="ui inverted violet button">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="col-md-3">
-
-            <div class="ui cards ">
-                <div class="card main-cards">
-                    <div class="image">
-                        <img src="~/static/Images/ImageKnowUs.png">
-                    </div>
-                    <div class="content">
-                        <div class="header">Nome do pacote</div>
-                        <div class="meta">
-                            <a>Duração do pacote</a>
-                        </div>
-                        <div class="description">
-                            Esta é a descrição do pacote
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <span class="right floated price">
-                            R$100,00
-                        </span>
-                        <button class="ui inverted violet button">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="col-md-3">
-
-            <div class="ui cards ">
-                <div class="card main-cards">
-                    <div class="image">
-                        <img src="~/static/Images/ImageKnowUs.png">
-                    </div>
-                    <div class="content">
-                        <div class="header">Nome do pacote</div>
-                        <div class="meta">
-                            <a>Duração do pacote</a>
-                        </div>
-                        <div class="description">
-                            Esta é a descrição do pacote
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <span class="right floated price">
-                            R$100,00
-                        </span>
-                        <button class="ui inverted violet button">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-
-
-        </div>
-
-        <div class="col-md-3">
-
-            <div class="ui cards ">
-                <div class="card main-cards">
-                    <div class="image">
-                        <img src="~/static/Images/ImageKnowUs.png">
-                    </div>
-                    <div class="content">
-                        <div class="header">Nome do pacote</div>
-                        <div class="meta">
-                            <a>Duração do pacote</a>
-                        </div>
-                        <div class="description">
-                            Esta é a descrição do pacote
-                        </div>
-                    </div>
-                    <div class="extra content">
-                        <span class="right floated price">
-                            R$100,00
-                        </span>
-                        <button class="ui inverted violet button">Comprar</button>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
+    <div class="card-footer text-muted">
+        2 days ago
     </div>
+</div>
 
 
 
-
-
+<div class="row row-cols-1 row-cols-md-3 g-4 tratamentos">
+    <div class="col">
+        <div class="card h-100">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+        </div>
+    </div>
 </div>
