--- a/LotusProject/static/css/styleLayout.css
+++ b/LotusProject/static/css/styleLayout.css
@@ -1,5 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@300&display=swap');
-:root {
+﻿:root {
     --secundary-color: #2A435B;
     --primary-color: #b492ff
 }
@@ -81,24 +80,18 @@
 .nav-link {
     border-bottom: solid;
     border-bottom-color: var(--secundary-color);
-    font-size: 16px;
     border-bottom-width: 3px;
     margin-right: 15px;
     margin-left: 15px;
     color: var(--primary-color) !important;
 }
 
-    .menu-font {
-        font-family: 'Red Hat Mono', monospace;
-    }
-
-
-    .center-content {
-        border-radius: 5px;
-        margin-right: 15px;
-        margin-left: 15px;
-        color: var(--primary-color) !important;
-    }
+.center-content {
+    border-radius: 5px;
+    margin-right: 15px;
+    margin-left: 15px;
+    color: var(--primary-color) !important;
+}
 
 .buttoncarcolor {
     background-color: var(--secundary-color) !important;
@@ -107,7 +100,6 @@
 a.nav-link {
     display: flex;
     justify-content: center;
-
 }
 
     
