Layout Store Done

--- a/LotusProject/Views/Store/MainStore.cshtml
+++ b/LotusProject/Views/Store/MainStore.cshtml
@@ -5,139 +5,123 @@
 <link rel="stylesheet" href="~/static/css/StyleStore.css" />
 <!DOCTYPE html>
 
-<div class="content-store">
 
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
-    <p>conteudo</p>
+<div class="row">
+
+    <div class="col-md-3 cards-top">
+        <div class="ui card">
+            <div class="image">
+                <img src="~/static/Images/Alberto Costa.png">
+            </div>
+            <div class="content">
+                
+                <div class="header">Nome do Produto   <i class="heart outline icon fav" style="margin-left: 50px; color: #b492ff "></i> </div>
+
+                <div class="meta">
+                    <a>Categoria</a>
+                </div>
+                <div class="description">
+                    Descrição do produto.
+                </div>
+            </div>
+            <div class="extra content">
+                <span class="right floated">
+                    R$ 00,00
+                </span>
+                    <div class="ui checkbox">
+                        <input type="checkbox" name="example">
+                        <label class="text-muted">Selecionar produto</label>
+                    </div>                   
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-3 cards-top">
+        <div class="ui card">
+            <div class="image">
+                <img src="~/static/Images/Alberto Costa.png">
+            </div>
+            <div class="content">
+
+                <div class="header">Nome do Produto   <i class="heart outline icon fav" style="margin-left: 50px; color: #b492ff "></i> </div>
+
+                <div class="meta">
+                    <a>Categoria</a>
+                </div>
+                <div class="description">
+                    Descrição do produto.
+                </div>
+            </div>
+            <div class="extra content">
+                <span class="right floated">
+                    R$ 00,00
+                </span>
+                <div class="ui checkbox">
+                    <input type="checkbox" name="example">
+                    <label class="text-muted">Selecionar produto</label>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-3 cards-top">
+        <div class="ui card">
+            <div class="image">
+                <img src="~/static/Images/Alberto Costa.png">
+            </div>
+            <div class="content">
+
+                <div class="header">Nome do Produto   <i class="heart outline icon fav" style="margin-left: 50px; color: #b492ff "></i> </div>
+
+                <div class="meta">
+                    <a>Categoria</a>
+                </div>
+                <div class="description">
+                    Descrição do produto.
+                </div>
+            </div>
+            <div class="extra content">
+                <span class="right floated">
+                    R$ 00,00
+                </span>
+                <div class="ui checkbox">
+                    <input type="checkbox" name="example">
+                    <label class="text-muted">Selecionar produto</label>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-3 cards-top">
+        <div class="ui card">
+            <div class="image">
+                <img src="~/static/Images/Alberto Costa.png">
+            </div>
+            <div class="content">
+
+                <div class="header">Nome do Produto   <i class="heart outline icon fav" style="margin-left: 50px; color: #b492ff "></i> </div>
+
+                <div class="meta">
+                    <a>Categoria</a>
+                </div>
+                <div class="description">
+                    Descrição do produto.
+                </div>
+            </div>
+            <div class="extra content">
+                <span class="right floated">
+                    R$ 00,00
+                </span>
+                <div class="ui checkbox">
+                    <input type="checkbox" name="example">
+                    <label class="text-muted">Selecionar produto</label>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
+
+
+   
+    
