--- a/LotusProject/Views/Shared/_LayoutStore.cshtml
+++ b/LotusProject/Views/Shared/_LayoutStore.cshtml
@@ -6,8 +6,8 @@
 
     <!-- Semantic UI -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.js"></script>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.css" rel="stylesheet" />
     <script>
         $('.ui.dropdown')
             .dropdown()
@@ -37,19 +37,19 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 
             @*<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <b><a class="nav-link" href="@Url.Action( "Home", "Home")"><b>Início</b></a></b>
-                    </li>
-                    <li class="nav-item">
-                        <b> <a class="nav-link" href="@Url.Action( "InitialPage", "Home")"><b>Reserva</b></a></b>
-                    </li>
-                    <li class="nav-item">
-                        <b> <a class="nav-link" href="@Url.Action( "KnowUs", "Home")"><b>Contato</b></a></b>
-                    </li>
-                </ul>*@
+            <li class="nav-item">
+                <b><a class="nav-link" href="@Url.Action( "Home", "Home")"><b>Início</b></a></b>
+            </li>
+            <li class="nav-item">
+                <b> <a class="nav-link" href="@Url.Action( "InitialPage", "Home")"><b>Reserva</b></a></b>
+            </li>
+            <li class="nav-item">
+                <b> <a class="nav-link" href="@Url.Action( "KnowUs", "Home")"><b>Contato</b></a></b>
+            </li>
+        </ul>*@
 
 
-            <form class="d-flex center-content">
+            <form class="center-content">
                 <div class="ui category search">
                     <div class="ui icon input">
                         <input class="prompt" type="text" placeholder="Procurar produtos...">
@@ -61,27 +61,24 @@
             &nbsp;&nbsp;
 
 
-
-            <div class="loc">
-                <button class="ui icon button nav-link buttoncarcolor loc">
-                    <i class="map marker alternate icon"></i>
-                </button>
-            </div>
-
-            <div class="heart">
-                <button class="ui icon button nav-link buttoncarcolor loc">
-                    <i class="heart icon"></i>
-                </button>
-            </div>
-
-            <div class="center-content">
-                <div class="ui vertical animated button nav-link buttoncarcolor bord">
-                    <div class="visible content"><i class="shop icon"></i></div>
-                    <div class="hidden content">
-                        Carrinho
-                    </div>
+            
+                <div class="heart">
+                    <button class="ui icon button nav-link buttoncarcolor">
+                        <i class="map marker alternate icon"></i>
+                    </button>
                 </div>
-            </div>
+
+                <div class="heart">
+                    <button class="ui icon button nav-link buttoncarcolor">
+                        <i class="heart icon"></i>
+                    </button>
+                </div>
+
+                <div class="heart">
+                    <button class="ui icon button nav-link buttoncarcolor">
+                        <i class="shop icon"></i>
+                    </button>
+                </div>
 
             <div>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -109,7 +106,7 @@
                     </li>
                 </ul>
             </div>
-
+        </div>
     </nav>
 
     <div class="ui inverted vertical menu navbar-lateral">
@@ -151,7 +148,7 @@
             Difusores
         </a>
     </div>
-    <div>
+    <div class="content-store">
         @RenderBody()
     </div>
 
