--- a/LotusProject/static/css/StyleStore.css
+++ b/LotusProject/static/css/StyleStore.css
@@ -1,3 +1,25 @@
-﻿.content-store{
-    padding-left: 100px
+﻿:root {
+    --secundary-color: #2A435B;
+    --primary-color: #b492ff
+}
+
+.card {
+    border-radius: 15px !important;
+    width: 250px !important;
+    height: 400px !important
+}
+
+.ui.cards > .card > :first-child, .ui.card > :first-child {
+    border-top-left-radius: 50px !important;
+    border-top-right-radius: 50px !important
+}
+
+div.image img {
+    border-top-left-radius: 15px !important;
+    border-top-right-radius: 15px !important
+}
+
+.cards-top {
+    border-top-left-radius: 15px !important;
+    border-top-right-radius: 15px !important
 }
