Remove Class Libraries | Finish Dashboard | Add Views Database |

--- a/LotusProject/Views/Customer/ViewLoginCustomer.cshtml
+++ b/LotusProject/Views/Customer/ViewLoginCustomer.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClassLibraryModels.InputModels.InputLoginCustomer
+﻿@model LotusProject.Models.InputModels.InputLoginCustomer
 @{
     Layout = null;
 }
@@ -31,9 +31,6 @@
                     <a class="nav-link menu-font" href="@Url.Action( "Home", "Home")">Voltar ao início</a>
                 </li>
             </ul>
-
-
-        
 
     </nav>
 
