--- a/LotusProject/Views/Customer/ViewRegisterCustomer.cshtml
+++ b/LotusProject/Views/Customer/ViewRegisterCustomer.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClassLibraryModels.InputModels.InputCustomer
+﻿@model LotusProject.Models.InputModels.InputCustomer
 @{
     Layout = null;
 }
