--- a/LotusProject/Views/Employee/LogInEmployee.cshtml
+++ b/LotusProject/Views/Employee/LogInEmployee.cshtml
@@ -1,8 +1,69 @@
-﻿
+﻿@model LotusProject.Models.InputModels.InputLoginEmployee
 @{
     ViewBag.Title = "LogInEmployee";
-    Layout = "~/Views/Shared/_LayoutEmployee.cshtml";
+    Layout = null;
 }
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.js"></script>
+    <link rel="stylesheet" href="~/static/css/StyleLoginCustomer.css">
 
-<h2>LogInEmployee</h2>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <title>ViewLoginCustomer</title>
+</head>
+<nav class="navbar navbar-light fluid fixed-top">
+    <a href="~/Home/InitialPage"><img src="~/static/Images/LogoForBlue.png" height="50" width="50"></a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+            <a class="nav-link menu-font" href="@Url.Action( "Home", "Home")">Voltar ao início</a>
+        </li>
+    </ul>
+
+
+</nav>
+
+
+<div class="row row-custom" style=" height: 100%">
+    <div class="col-md-6 photo-side">
+        <img style="width:100%; height:100%" src="~/static/Images/svg/LoginEmployee.svg" />
+    </div>
+    <div class="col-md-6 form-side">
+
+        @using (Html.BeginForm("SignInEmp", "Employee", FormMethod.Post, new { @style = "width: 70%;" }))
+        {
+            <div style="margin-top:3%; margin-left:1%">
+                <h3 style=" color: #ffffff">Entrar</h3>
+                <hr style="height: 2px; width: 100%; border-width: 0; background-color: #2A435B; color: #2A435B ">
+            </div>
+            <div class="mb-3">
+
+                @Html.LabelFor(model => model.login, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%; padding-top:5%" })
+                @Html.EditorFor(model => model.login, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @placeholder = "Insira seu login...", @style = "border-color: #2A435B" } })
+                @Html.ValidationMessageFor(model => model.login, "", new { @class = "text-danger" })
+            </div>
+
+            <div class="mb-3">
+
+
+                @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "form-label", @style = "margin-left:1%;" })
+                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control focus-input rounded-pill", @placeholder = "Insira sua senha...", @style = "border-color: #2A435B" } })
+
+            </div>
+
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <button type="submit" class="btn btn-outline-primary" style="width:100%"><b>ENTRAR</b></button>
+
+            <script src="@Url.Content("~/Scripts/jquery-3.4.1.min.js")" type="text/javascript"></script>
+            <script src="@Url.Content("~/Scripts/jquery.validate.js")" type="text/javascript"></script>
+            <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+        }
+    </div>
+</div>
+
 
