--- a/LotusProject/Views/Shared/_Layout.cshtml
+++ b/LotusProject/Views/Shared/_Layout.cshtml
@@ -1,12 +1,4 @@
-﻿@{
-    ClassLibraryModels.Models.Customer cust = (ViewBag.CustumerAttributes != null) ? ViewBag.CustumerAttributes : new ClassLibraryModels.Models.Customer();
-
-
-}
-
-
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
