--- a/LotusProject/Views/Shared/_LayoutEmployee.cshtml
+++ b/LotusProject/Views/Shared/_LayoutEmployee.cshtml
@@ -38,7 +38,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="~/Employee/Dashboard">
                     <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                     <span class="title">Dashboard</span>
                 </a>
@@ -56,7 +56,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="~/Employee/EmployeeCenter">
                     <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                     <span class="title">Funcionários</span>
                 </a>
